Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31538

Regression: Spin boxes layouting broken with setFrame(false)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.1
    • 5.1.0 Beta 1
    • GUI: Look'n'Feel
    • Mac OS X 10.8.3
    • 93c0de7253e79c1510f6c761c1fc7bdfa2d87658

    Description

      In Qt 5.1 (qtbase 2cb5f1957ac709d27acbbdb49be8615670682212), setting spinbox->setFrame(false) makes the spin box edit shrink.

      See screenshots & attached sample project.

      Attachments

        1. qt5.0.2.png
          qt5.0.2.png
          17 kB
        2. qt5.1.png
          qt5.1.png
          17 kB
        3. untitled.tgz
          1 kB
        For Gerrit Dashboard: QTBUG-31538
        # Subject Branch Project Status CR V

        Activity

          People

            bachewii Jens
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes