DiffEditor: Fix context lines spin box layout.

Work around a regression in Qt 5 (QTBUG-31538)
Also prefer setting left+right margins instead of all margins for the
label.

Change-Id: I108de101239145295d37002aa989a959d8041c55
Reviewed-by: Jarek Kobus <jaroslaw.kobus@digia.com>